# learning_Rust

./: Cargo.toml  README.md
src/: main.rs
static/: index.html  script.js
static/background/: under_sea.avif
static/css/: custom.css
static/js/: script.js
