[package]
name = "learn_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros", "multipart"] } 
hyper = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] } 
tower-http = { version = "0.5", features = ["fs"] }
uuid = { version = "1.0", features = ["v4", "serde"] } 
async-stream = "0.3"
mime_guess = "2.0"
tokio-util = "0.7.15"
url = "2.5.4"
jsonwebtoken = "9.3.1"


